@@ -28,8 +28,9 @@ phpqladmin (2.0.18c-1) unstable; urgency=low
   * To make sure we don't get 'Wrong datatype' in tables/user_add-additional.inc
     when checking if the mailHost is a DNS entry, we only look in the QLC
     array if there IS such an array.
+  * Suidperl should no longer be used as interpreter in suid perl scripts.
 
- -- Turbo Fredriksson <turbo@debian.org>  Sat,  1 May 2004 09:23:14 +0200
+ -- Turbo Fredriksson <turbo@debian.org>  Tue,  4 May 2004 08:36:06 +0200
 
 phpqladmin (2.0.18b-1) unstable; urgency=low
 
