@@ -66,6 +66,7 @@ phpQLAdmin 2.0.18c TO BE ANNOUNCED
 	  - To make sure we don't get 'Wrong datatype' in tables/user_add-additional.inc
 	    when checking if the mailHost is a DNS entry, we only look in the QLC
 	    array if there IS such an array.
+	  - Suidperl should no longer be used as interpreter in suid perl scripts.
 
 	GUI layout change
 	  - Require the pql_config.inc file to avoid PHP errors in the right frame
